doc update for presentation

--- a/notebook/exp_alpha.ipynb
+++ b/notebook/exp_alpha.ipynb
@@ -721,15 +721,107 @@
    "id": "6d239697-2c72-4ca7-9499-9fedbcde09b1",
    "metadata": {},
    "source": [
-    "This looks like the one produced by Blender.  \n",
+    "This looks the most alike to the one produced by Blender, but just to make things sure let's compare it numerically.\n",
     "\n",
-    "q.e.d."
+    "To compare how much one image is alike another, we can use the structural similarity index (SSIM). The SSIM measures the similarity between two images; it considers changes in texture, luminance, and contrast between the two images. The SSIM index ranges from -1 to 1, where 1 indicates perfect similarity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b3d84890-0c7a-4cea-bc6f-5902fa3b658c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SSIM alpha composite vs Blender reference: 0.9344458473211983\n",
+      "SSIM pixel-wise maximum vs Blender reference: 0.9656581505718361\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from skimage.metrics import structural_similarity as ssim\n",
+    "import cv2\n",
+    "\n",
+    "# Function to calculate SSIM between two images\n",
+    "def calculate_ssim(imageA_path, imageB_path):\n",
+    "    # Load the two images\n",
+    "    imageA = cv2.imread(imageA_path)\n",
+    "    imageB = cv2.imread(imageB_path)\n",
+    "    \n",
+    "    # Convert the images to grayscale\n",
+    "    imageA_gray = cv2.cvtColor(imageA, cv2.COLOR_BGR2GRAY)\n",
+    "    imageB_gray = cv2.cvtColor(imageB, cv2.COLOR_BGR2GRAY)\n",
+    "    \n",
+    "    # Compute SSIM between two images\n",
+    "    score, _ = ssim(imageA_gray, imageB_gray, full=True)\n",
+    "    return score\n",
+    "\n",
+    "# Paths to the images\n",
+    "reference_path = 'LF_on_LTV_by_Blender.jpg'\n",
+    "composite_image_path = 'composite_image.png'\n",
+    "maxed_image_path = 'maxed_image.jpg'\n",
+    "\n",
+    "# Calculate SSIM for each pair of images\n",
+    "ssim_composite_reference = calculate_ssim(composite_image_path, reference_path)\n",
+    "ssim_maxed_reference = calculate_ssim(maxed_image_path, reference_path)\n",
+    "\n",
+    "print(f'SSIM alpha composite vs Blender reference: {ssim_composite_reference}\\n'+\n",
+    "      f'SSIM pixel-wise maximum vs Blender reference: {ssim_maxed_reference}\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67feb27d",
+   "metadata": {},
+   "source": [
+    "SSIM comparing each color channel:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "54ed4739",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "color SSIM composite vs Blender reference: 0.9205018374621772\n",
+      "color SSIM pixel-wise max vs Blender reference: 0.9567464762704648\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Function to calculate SSIM between two color images\n",
+    "def color_ssim(imageA_path, imageB_path):\n",
+    "    # Load the two images\n",
+    "    imageA = cv2.imread(imageA_path)\n",
+    "    imageB = cv2.imread(imageB_path)\n",
+    "    \n",
+    "    # Compute SSIM over the 3 channels (color) and average them\n",
+    "    score = (ssim(imageA[:, :, 0], imageB[:, :, 0]) +\n",
+    "             ssim(imageA[:, :, 1], imageB[:, :, 1]) +\n",
+    "             ssim(imageA[:, :, 2], imageB[:, :, 2])) / 3\n",
+    "    return score\n",
+    "\n",
+    "# Calculate SSIM for each pair of color images\n",
+    "color_ssim_composite = color_ssim(composite_image_path, reference_path)\n",
+    "color_ssim_maxed = color_ssim(maxed_image_path, reference_path)\n",
+    "\n",
+    "print(f'color SSIM composite vs Blender reference: {color_ssim_composite}\\n'+\n",
+    "      f'color SSIM pixel-wise max vs Blender reference: {color_ssim_maxed}\\n')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b3d84890-0c7a-4cea-bc6f-5902fa3b658c",
+   "id": "079fdacc",
    "metadata": {},
    "outputs": [],
    "source": []
